--- a/css/index.css
+++ b/css/index.css
@@ -24,9 +24,9 @@ body {
 }
 
 .container .clock {
+  min-width: 110px;
   z-index: 10;
   position: relative;
-  width: 350px;
   border: 10px solid rgba(223, 224, 220, 0.5);
   border-radius: 10px;
   padding: 10px;
