--- a/src/sass/components/_generals.sass
+++ b/src/sass/components/_generals.sass
@@ -17,9 +17,9 @@ body
     align-items: center
 
     .clock
+        min-width: 110px
         z-index: 10
         position: relative
-        width: 350px
         border: 10px solid rgba(#DFE0DC, .5)
         border-radius: 10px
         padding: 10px
